fixed disclosure indicator and contrast on some text

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -140,7 +140,7 @@ input[type="text"].form-control, textarea.form-control {
             bottom: 0;
             padding: 13px 21px 8px 73px;
             background: @plainTransGray;
-            
+
             .chatstate {
                 position: absolute;
                 top: -14px;
@@ -173,6 +173,8 @@ input[type="text"].form-control, textarea.form-control {
                 width: 100%;
                 height: 52px;
                 font-size: 12px;
+                color: @textInput;
+                font-weight: 600;
             }
         }
         &.full {
@@ -461,7 +463,7 @@ input[type="text"].form-control, textarea.form-control {
 
     &:focus {
         background: white;
-    }    
+    }
 }
 .notify {
     position: relative;
